@@ -35,6 +35,9 @@ Improvements in current version
 12. Kludged together a bug fix for Alex Warshavsky (walex@il.ibm.com) where
     use-original-names sometimes produced Jimple Locals with #'s 
     in their names. (plam)
+13. Fixed bug reported by Sten Andrew Neuendorffer where CopyPropagator
+     doesn't quite fail in the expected way when there's a variable used
+     without definition (plam)
     
 Improvements in version 1.2.2 (Thu Mar 29 11:45:13 EST 2001)
 
